@@ -31,8 +31,6 @@ static peepRule *currRule = NULL;
 
 #define HTAB_SIZE 53
 
-hTab *labelHash = NULL;
-
 static struct
 {
   allocTrace values;
@@ -40,7 +38,7 @@ static struct
 } _G;
 
 static int hashSymbolName (const char *name);
-static void buildLabelRefCountHash (lineNode * head);
+static hTab *getLabelRefCountHash (lineNode *head);
 static void bindVar (int key, char **s, hTab ** vtab);
 
 static bool matchLine (char *, const char *, hTab **);
@@ -520,10 +518,7 @@ getLabelRef (const char *label, lineNode *head)
   labelHashEntry *entry;
 
   /* If we don't have the label hash table yet, build it. */
-  if (!labelHash)
-    {
-      buildLabelRefCountHash (head);
-    }
+  hTab *labelHash = getLabelRefCountHash (head);
 
   entry = hTabFirstItemWK (labelHash, hashSymbolName (label));
 
@@ -607,10 +602,7 @@ FBYNAME (labelRefCountChange)
   bool rc = FALSE;
 
   /* If we don't have the label hash table yet, build it. */
-  if (!labelHash)
-    {
-      buildLabelRefCountHash (head);
-    }
+  hTab *labelHash = getLabelRefCountHash (head);
 
   if (sscanf (cmdLine, "%*[ \t%]%d %i", &varNumber, &RefCountDelta) == 2)
     {
@@ -2740,9 +2732,23 @@ hashSymbolName (const char *name)
 /* Build a hash of all labels in the passed set of lines
  * and how many times they are referenced.
  */
-static void
-buildLabelRefCountHash (lineNode *head)
+static hTab *
+getLabelRefCountHash (lineNode *head)
 {
+  static hTab *labelHash = NULL;
+  if (head == NULL)
+    {
+      if (labelHash != NULL)
+	{
+	  hTabDeleteAll (labelHash);
+	  freeTrace (&_G.labels);
+	  labelHash = NULL;
+	}
+      return NULL;
+    }
+  if (labelHash != NULL)
+    return labelHash;
+
   lineNode *line;
   const char *label;
   int labelLen;
@@ -2849,6 +2855,7 @@ buildLabelRefCountHash (lineNode *head)
         }
     }
 #endif
+  return labelHash;
 }
 
 /* How does this work?
@@ -2882,8 +2889,6 @@ peepHole (lineNode ** pls)
   if (TARGET_PIC_LIKE)
     return;
 #endif
-
-  assert(labelHash == NULL);
 
   do
     {
@@ -2947,12 +2952,7 @@ peepHole (lineNode ** pls)
         }
     } while (restart == TRUE);
 
-  if (labelHash)
-    {
-      hTabDeleteAll (labelHash);
-      freeTrace (&_G.labels);
-    }
-  labelHash = NULL;
+  getLabelRefCountHash (NULL);
 }
 
 
